force-app/main/default/objects/Research_Project_Detail__c/Research_Project_Detail__c.object-meta.xml
<CustomObject>
    <label>Research Project Detail</label>
    <nameField>
        <displayFormat>RPD-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Research Project Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>