force-app/main/default/objects/Research_Project_Detail__c/fields/Blacklist__c.field-meta.xml
<CustomField>
    <fullName>Blacklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocklist</label>
    <type>Checkbox</type>
</CustomField>