force-app/main/default/objects/Research_Project_Detail__c/fields/Date_of_Attended__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Attended__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Attended</label>
    <type>Date</type>
</CustomField>