force-app/main/default/objects/Research_Project_Detail__c/fields/E_Mail_Status__c.field-meta.xml
<CustomField>
    <fullName>E_Mail_Status__c</fullName>
    <label>E-Mail Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email Sent</fullName>
            </value>
            <value>
                <fullName>Send Email</fullName>
            </value>
            <value>
                <fullName>Process Email</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>