force-app/main/default/objects/Research_Project_Detail__c/fields/Incentive_Amount__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Amount__c</fullName>
    <formula>Research_Project_Master__r.Incentive_Amount__c</formula>
    <label>Incentive Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>