force-app/main/default/objects/Research_Project_Detail__c/fields/Incentive_Date__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Incentive Date</label>
    <type>Date</type>
</CustomField>