force-app/main/default/objects/Research_Project_Detail__c/fields/Length_of_Interview__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Interview__c</fullName>
    <formula>Research_Project_Master__r.How_long_will_your_interviews_be__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length of Interview</label>
    <type>Text</type>
</CustomField>