force-app/main/default/objects/Research_Project_Detail__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <formula>IF(OR(ISPICKVAL(Research_Participant_Status__c, &quot;Attended&quot;),
      ISPICKVAL(Research_Participant_Status__c, &quot;No Show&quot;), 
      ISPICKVAL(Research_Participant_Status__c, &quot;Disqualified&quot;), 
      ISPICKVAL(Research_Participant_Status__c, &quot;Blacklist&quot;)),
  &quot;No&quot;, &quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Locked</label>
    <type>Text</type>
</CustomField>