force-app/main/default/objects/Research_Project_Detail__c/fields/NDA_Send__c.field-meta.xml
<CustomField>
    <fullName>NDA_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDA Send</label>
    <type>Checkbox</type>
</CustomField>