force-app/main/default/objects/Research_Project_Detail__c/fields/Participant_Email__c.field-meta.xml
<CustomField>
    <fullName>Participant_Email__c</fullName>
    <defaultValue>&quot;No Email&quot;</defaultValue>
    <label>Participant Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Email</fullName>
                <default>true</default>
                <label>No Email</label>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>