force-app/main/default/objects/Research_Project_Detail__c/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <formula>Research_Project_Master__r.Project_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Id</label>
    <type>Text</type>
</CustomField>