force-app/main/default/objects/Research_Project_Detail__c/fields/Proposed_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Incentive__c</fullName>
    <inlineHelpText>If Applicable for Incentive = true and Gift card/swag sent = true then &quot;Proposed Incentive&quot; value assign to &quot;Incentive&quot; field.</inlineHelpText>
    <label>Proposed Incentive</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>