force-app/main/default/objects/Research_Project_Detail__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>In case of blacklist or attended if researcher wants to add any comments</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>