force-app/main/default/objects/Research_Project_Detail__c/fields/Research_Project_Master__c.field-meta.xml
<CustomField>
    <fullName>Research_Project_Master__c</fullName>
    <label>Research Project Master</label>
    <referenceTo>Research_Project_Master__c</referenceTo>
    <relationshipLabel>Research Project Details</relationshipLabel>
    <relationshipName>Research_Project_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>