force-app/main/default/objects/Research_Project_Detail__c/fields/Send_Email_Error__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Send Email Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>