force-app/main/default/objects/Research_Project_Detail__c/fields/Sort_Comment__c.field-meta.xml
<CustomField>
    <fullName>Sort_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Sort Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>