force-app/main/default/objects/Research_Project_Detail__c/fields/Study_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Study_End_Date__c</fullName>
    <formula>Research_Project_Master__r.Project_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study End Date</label>
    <type>Date</type>
</CustomField>